# sapix_filename

./: .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
src/sapix_filename/: ai.py  cli.py  errors.py  pdf.py
tests/: test_cli.py  test_pdf.py
